--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -125,6 +125,11 @@
 	       border-left: 1px solid #000;
 	       border-right: 1px solid #000;
 	   }
+	   
+	   #buttons { 
+		   z-index:100; 
+		   background-color:#fff
+	   }
     </style> 
     
 </head>
@@ -161,7 +166,7 @@
                        <li class="name">
                          <h1>
 							 <a href="<!-- tmpl_var PROGRAM_URL -->">
-                            	 <img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/dada_mail_logo.png" alt="<!-- tmpl_var PROGRAM_NAME -->" >
+                            	 <img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/dada_mail_logo.png" alt="<!-- tmpl_var PROGRAM_NAME -->">
                          	</a>
 						  </h1>
                        </li>
