--- a/dada/templates/view_list_screen.tmpl
+++ b/dada/templates/view_list_screen.tmpl
@@ -7,11 +7,23 @@
 <!-- tmpl_set name="load_datetimepicker" value="1" -->
 
 
-<div id="screentitle"> 
-	<div id="screentitlepadding">
-		<!-- tmpl_var title -->
+<div class="row">
+	<div class="medium-10 small-9 columns">
+	   	<nav class="breadcrumbs">	
+		 	 <a href="#" class="unavailable">
+				Membership
+			 </a>
+	 	    <a 
+				href="#"
+				class="current"
+			>	
+				View
+			</a>
+		</nav>
 	</div>
-	<!-- tmpl_include help_link_widget.tmpl -->
+	<div class="medium-2 small-3 columns text-right">
+	   <!-- tmpl_include help_link_widget.tmpl -->
+	</div>
 </div>
 	
 <form>
