--- a/dada/templates/list_activity_screen.tmpl
+++ b/dada/templates/list_activity_screen.tmpl
@@ -3,14 +3,28 @@
 <!-- tmpl_set name="title" value="Membership &#187; Recent Activity" -->
 <!-- tmpl_set name="load_google_viz" value="1" -->
 
-<div id="screen_meta" data-menu_highlight="list_activity"></div>
 
-<div id="screentitle"> 
-	<div id="screentitlepadding">
-		<!-- tmpl_var title -->
+<div class="row">
+	<div class="medium-10 small-9 columns">
+	   	<nav class="breadcrumbs">	
+		 	 <a href="#" class="unavailable">
+				Membership
+			 </a>
+	 	    <a 
+				href="#"
+				class="current"
+			>	
+				Recent Activity
+			</a>
+		</nav>
 	</div>
-	<!-- tmpl_include help_link_widget.tmpl -->
+	<div class="medium-2 small-3 columns text-right">
+	   <!-- tmpl_include help_link_widget.tmpl -->
+	</div>
 </div>
+
+
+<div id="screen_meta" data-menu_highlight="list_activity"></div>
 <div id="list_activity"></div> 
 <form> 
 	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" >
