--- a/dada/templates/send_email_schedule_options_widget.tmpl
+++ b/dada/templates/send_email_schedule_options_widget.tmpl
@@ -1,111 +1,233 @@
 <!-- begin send_email_schedule_options_widget.tmpl -->
 
-
 <!-- tmpl_if expr="(draft_role ne 'schedule')" -->
     <div style="display:none">
 <!-- /tmpl_if -->
-    
 
-        <fieldset>
-            <legend>Scheduling Options</legend>    
-
-            <input type="hidden" name="schedule_html_body_checksum" id="schedule_html_body_checksum" value="" >
-            <p>
-                <input type="checkbox" name="schedule_activated" id="schedule_activated" value="1" class="schedule_field" >
-                <label for="schedule_activated">
-                    Activate
-                </label></p>
-
-            <p>
-            <input type="radio" name="schedule_type" id="schedule_type_single" value="single" checked="checked" class="scheduled_type schedule_field">
-            <label for="schedule_type_single">Single</label>
-
-            <div id="schedule_type_single_options"> 
-                    <p>
-                        <label for="schedule_single_displaydatetime">
-                            Schedule For:
-                        </label>
-                    <input type="text" name="schedule_single_displaydatetime" id="schedule_single_displaydatetime" class="schedule_field" >
-                </p>
-            </div> 
-            
-            <p>
-            <input type="radio" name="schedule_type" id="schedule_type_recurring" value="recurring"  class="scheduled_type schedule_field" <!-- tmpl_unless can_use_datetime -->disabled="disabled" class="disabled"<!-- /tmpl_unless --> >
-            <label for="schedule_type_recurring">Recurring</label> <!-- tmpl_unless can_use_datetime --><span class="error">Disabled. Recurring scheduled mass mailings require the DateTime and DateTime::Event::Recurrence CPAN Perl modules installed.</span><!-- /tmpl_unless -->
-            <p>
-
-            <div id="schedule_type_recurring_options"> 
-            
-                <table> 
-                    <tr> 
-                        <td> 
-                            
-                        <p><label for="schedule_recurring_displaydatetime_start">
-                            Starting on:
-                        </label>
-                        <br > 
-                        <input type="text" name="schedule_recurring_displaydatetime_start" id="schedule_recurring_displaydatetime_start" class="schedule_field" >
-                            </p>
-                        </td>
-                        <td>
-                            <p>
-                        <label for="schedule_recurring_displaydatetime_end">
-                            Ending on: 
-                        </label><br > 
-                        
-                           <input type="text" name="schedule_recurring_displaydatetime_end" id="schedule_recurring_displaydatetime_end" class="schedule_field" >
-                        </p></td>
-                        <td> 
-                            <p>
-                            <label for="schedule_recurring_display_hms">
-                                At: 
-                            </label><br >
-                            <input type="text" name="schedule_recurring_display_hms" id="schedule_recurring_display_hms" value="00:00" class="schedule_field"  >
-                            </p> 
-                        </td>
-                    </tr>
-                </table> 
-
-                <table> 
-                <tr> 
-                <td><p>Sent on:
-                </td><td><input type="checkbox" name="schedule_recurring_days" id="mon" value="1" class="schedule_field" checked="checked" > <label for="mon">Monday</label> |
-                </td><td><input type="checkbox" name="schedule_recurring_days" id="tue" value="2" class="schedule_field" checked="checked"  > <label for="tue">Tuesday</label> | 
-                </td><td><input type="checkbox" name="schedule_recurring_days" id="wed" value="3" class="schedule_field" checked="checked"  > <label for="wed">Wednesday</label> | 
-                </td><td><input type="checkbox" name="schedule_recurring_days" id="thu" value="4" class="schedule_field" checked="checked"  > <label for="thu">Thursday</label> | 
-                </td><td><input type="checkbox" name="schedule_recurring_days" id="fri" value="5" class="schedule_field" checked="checked"  > <label for="fri">Friday</label> | 
-                </td><td><input type="checkbox" name="schedule_recurring_days" id="sat" value="6" class="schedule_field" checked="checked"  > <label for="sat">Saturday</label> | 
-                </td><td> <input type="checkbox" name="schedule_recurring_days" id="sun" value="7" class="schedule_field" checked="checked" >  <label for="sun">Sunday</label>
-                </td>
-                <tr>
-                </table> 
-                
-                <!-- tmpl_if expr="(screen eq 'send_url_email')" -->
-                <p>
-                    <input type="checkbox" name="schedule_recurring_only_mass_mail_if_html_diff" id="schedule_recurring_only_mass_mail_if_html_diff"  class="schedule_field"  value="1" checked="checked" >
-                    <label for="schedule_recurring_only_mass_mail_if_html_diff">
-                        Only send the next scheduled mass mailing, if the HTML content differs from the previous scheduled  mass mailing
-                    </label>
-                </p>
-                <!-- tmpl_else --> 
-                <p>
-                    <input type="hidden" name="schedule_recurring_only_mass_mail_if_html_diff" id="schedule_recurring_only_mass_mail_if_html_diff" value="1" >
-                    
-                </p>
-                
-                <!-- /tmpl_if --> 
-                
-            </div>
-            
-            <div class="alert-box info radius"> 
-                <div id="mass_mailing_schedules_preview_results"></div>
-                <div class="buttonfloat"> 
-                	<input type="button" class="processing manually_run_all_scheduled_mass_mailings" value="Manually Run All Scheduled Mass Mailings">
-                </div>
-                <div class="floatclear"></div> 
-                 
-            </div> 
-            
+<fieldset>
+    <legend>
+		Scheduling Options
+	</legend>    
+    <input
+		 type="hidden" 
+		 name="schedule_html_body_checksum" 
+		 id="schedule_html_body_checksum" value=""
+	>
+	
+	<div class="row">
+		<div class="small-12 columns">
+			<input 
+				type="checkbox" 
+				name="schedule_activated" 
+				id="schedule_activated" 
+				value="1" class="schedule_field"
+			>
+            <label for="schedule_activated">
+                Activate
+            </label>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="small-12 columns">
+			<input 
+				type="radio" 
+				name="schedule_type" 
+				id="schedule_type_single" 
+				value="single" 
+				checked="checked" 
+				class="scheduled_type schedule_field"
+			>
+			<label for="schedule_type_single">
+				Single
+			</label>
+		</div>
+	</div>
+				
+    <div id="schedule_type_single_options"> 
+		<div class="row">
+			<div class="small-1 columns">
+			</div>
+			<div class="small-11 columns">
+                <label for="schedule_single_displaydatetime">
+                    Schedule For:
+                </label>
+            	<input 
+					type="text" 
+					name="schedule_single_displaydatetime" 
+					id="schedule_single_displaydatetime" 
+					class="schedule_field"
+				>
+			</div>
+		</div>
+    </div> 
+	
+	<div class="row">
+		<div class="small-12 columns">
+			<input 
+				type="radio" 
+				name="schedule_type" 
+				id="schedule_type_recurring" 
+				value="recurring"  
+				class="scheduled_type schedule_field" 
+				<!-- tmpl_unless can_use_datetime -->disabled="disabled" class="disabled"<!-- /tmpl_unless -->
+			>
+			<label for="schedule_type_recurring">
+				Recurring
+			</label>
+			<!-- tmpl_unless can_use_datetime -->
+				<div class="alert-box alert radius">
+					Disabled. Recurring scheduled mass mailings require the DateTime and DateTime::Event::Recurrence CPAN Perl modules installed.
+				</div>
+			<!-- /tmpl_unless -->
+		</div>
+	</div>
+	
+    <div id="schedule_type_recurring_options">
+		<div class="row">
+			<div class="small-1 columns">
+			</div>
+			<div class="small-11 columns">
+				<div class="row">
+					<div class="large-4 columns">
+						<label for="schedule_recurring_displaydatetime_start">
+							Starting on:
+						</label>
+						<input 
+							type="text" 
+							name="schedule_recurring_displaydatetime_start" 
+							id="schedule_recurring_displaydatetime_start" 
+							class="schedule_field"
+						>
+					</div>
+					<div class="large-4 columns">
+						<label for="schedule_recurring_displaydatetime_end">
+							Ending on: 
+						</label> 
+						<input
+							type="text" 
+							name="schedule_recurring_displaydatetime_end" 
+							id="schedule_recurring_displaydatetime_end" 
+							class="schedule_field"
+						>
+					</div>
+					<div class="large-4 columns">							
+						<label for="schedule_recurring_display_hms">
+							At: 
+						</label>
+						<input 
+						type="text" 
+						name="schedule_recurring_display_hms"
+						id="schedule_recurring_display_hms" 
+						value="00:00" class="schedule_field" 
+						>
+					</div>
+				</div>
+	
+				<div class="row">
+					<div class="large-12 columns">
+						<label>
+							Sent on:
+						<label>
+					</div> 
+				</div>
+				<div class="row">
+					<div class="large-2 columns">
+		                 <label for="mon">
+							 <input 
+							 	type="checkbox" 
+								name="schedule_recurring_days" 
+								id="mon" 
+								value="1" 
+								class="schedule_field" 
+								checked="checked"
+							>
+								Monday
+						</label> 
+					</div> 
+					<div class="large-2 columns">		                
+						 <label for="tue">
+							<input type="checkbox" name="schedule_recurring_days" id="tue" value="2" class="schedule_field" checked="checked"  >
+				 		 	Tuesday
+					  	 </label> 
+					</div> 
+					<div class="large-2 columns">
+		                <label for="wed">
+							<input type="checkbox" name="schedule_recurring_days" id="wed" value="3" class="schedule_field" checked="checked">
+							Wednesday
+						</label>
+					</div> 
+					<div class="large-2 columns">
+		                 <label for="thu">
+							 <input type="checkbox" name="schedule_recurring_days" id="thu" value="4" class="schedule_field" checked="checked">
+							 Thursday
+						 </label> 
+					</div> 
+					<div class="large-4 columns">
+					</div> 
+				</div>
+				<div class="row">
+					<div class="large-2 columns">
+		                <label for="fri">
+							<input type="checkbox" name="schedule_recurring_days" id="fri" value="5" class="schedule_field" checked="checked">
+							Friday
+						</label> 
+					</div> 
+					<div class="large-2 columns">
+		                <label for="sat">
+							<input type="checkbox" name="schedule_recurring_days" id="sat" value="6" class="schedule_field" checked="checked"  >
+							Saturday
+						</label> 
+					</div> 
+					<div class="large-2 columns">
+		                 <label for="sun">
+							 <input type="checkbox" name="schedule_recurring_days" id="sun" value="7" class="schedule_field" checked="checked" >
+						 	Sunday
+						</label>
+					</div> 
+					<div class="large-6 columns">
+					</div>
+				</div>
+            <!-- tmpl_if expr="(screen eq 'send_url_email')" -->
+				<div class="row">
+					<div class="small-12 columns">
+	                    <input 
+							type="checkbox" 
+							name="schedule_recurring_only_mass_mail_if_html_diff" 
+							id="schedule_recurring_only_mass_mail_if_html_diff"  
+							class="schedule_field"  
+							value="1" 
+							checked="checked"
+						>
+	                    <label for="schedule_recurring_only_mass_mail_if_html_diff">
+	                        Only send the next scheduled mass mailing, if the HTML content differs from the previous scheduled  mass mailing
+	                    </label>
+					</div> 
+				</div>
+			<!-- tmpl_else --> 
+                <input
+					type="hidden" 
+					name="schedule_recurring_only_mass_mail_if_html_diff" 
+					id="schedule_recurring_only_mass_mail_if_html_diff" 
+					value="1"
+				>
+        	<!-- /tmpl_if --> 
+	    </div>
+	</div>
+</div>	
+<div class="alert-box info radius"> 
+    <div id="mass_mailing_schedules_preview_results"><p>&nbsp;</p></div>
+	<ul class="button-group right">
+		<li>
+			<input 
+				type="button" 
+				class="small button processing manually_run_all_scheduled_mass_mailings" 
+				value="Manually Run All Scheduled Mass Mailings"
+			>
+		</li>
+	</ul>
+	<p>&nbsp;</p>
+</div> 
 
 </fieldset> 
 
