--- a/dada/templates/sending_monitor_index_screen.tmpl
+++ b/dada/templates/sending_monitor_index_screen.tmpl
@@ -4,12 +4,25 @@
 <div id="screen_meta" data-menu_highlight="sending_monitor"></div>
 
 
-<div id="screentitle"> 
-	<div id="screentitlepadding">
-	 	<!-- tmpl_var title --> 
+<div class="row">
+	<div class="medium-10 small-9 columns">
+	   	<nav class="breadcrumbs">	
+		 	 <a href="#" class="unavailable">
+				 Mass Mailing 
+			 </a>
+	 	    <a 
+				href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=sending_monitor"
+				class="current"
+			>	
+				Monitor Your Mailings
+			</a>
+		</nav>
 	</div>
-	<!-- tmpl_include help_link_widget.tmpl -->
+	<div class="medium-2 small-3 columns text-right">
+	   <!-- tmpl_include help_link_widget.tmpl -->
+	</div>
 </div>
+
 <div id="sending_monitor_index"></div> 
 <form> 
 	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" > 
